# psswdprj

./: .gitignore  README.md  cli.py  generator.py  markob_gen.py  model.pkl  passwords.db  pyproject.toml
source/: __init__.py  cli.py  generator.py  vault.py
tex/: PwdMan_report.tex
