[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markov-password-manager"
version = "1.0.0"
dependencies = [
    "typer",
    "pyperclip",
    "cryptography",
    "platformdirs",
]

[project.scripts]
pwdman = "source.cli:app"

[tool.setuptools]
packages = ["source"]

[tool.setuptools.package-data]
source = ["data/corpus.txt"]
